@@ -1,3 +1,11 @@
+2008-02-03  Michael Goffioul <michael.goffioul@gmail.com>
+
+	* Array.cc (ascending_compare, descending_compare,
+	Array<T>::sort): Declare explicit specialization for T=double to
+	avoid symbol duplication error at link time.
+	* Array-d.cc (ascending_compare, descending_compare): Declare and
+	define as nonmember functions, not member functions of Array<T>.
+
 2008-02-03  John W. Eaton  <jwe@octave.org>
 
 	* Array-i.cc: Also instantiate Arrays for long long type if it exists.
